war-run-skriptiin jdk11-muutoksia